Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-102282

lupdate doesn't parse resource files if passed via json project's description file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 6.5.0 Beta1
    • 5.15.7, 6.2.2, 6.3.0 RC
    • Tools: Linguist
    • None
    • All
    • db830ae434 (qt/qttools/dev) db830ae434 (qt/tqtc-qttools/dev)

    Description

      When lupdate parses sources provided via JSON project's description then file resources files (*.qrc) are not scanned. 

      This is quite big problem because cmake's qt_add_translations internally generates json files with sources list and passes it to lupdate.  With current behavior its not possible to use cmake's target update_translations if some file are in qrc resource (which is kind of convenient for qml files).

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jbornema Joerg Bornemann
            lkorbel Łukasz Korbel
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes