lupdate: Parse .qrc files when using -project

Files in .qrc files were not taken into account when passing -project to
lupdate.

lupdate converts .pro files to .json files internally with the lprodump
tool.  That tool already expanded .qrc files - that's why tst_lupdate
good:parseqrc succeeded.

Fixes: QTBUG-102282
Change-Id: Ib4cb2bfeb81eab7d165e6865629f69f951dc6492
Reviewed-by: Lucie Gerard <lucie.gerard@qt.io>
Reviewed-by: Kai Koehne <kai.koehne@qt.io>