src/linguist/lupdate/main.cpp
@@ -476,6 +476,31 @@ static QStringList getResources(const QString &resourceFile)
     return rqr.files;
 }
 
+// Remove .qrc files from the project and return them as absolute paths.
+static QStringList extractQrcFiles(Project &project)
+{
+    auto it = project.sources.begin();
+    QStringList qrcFiles;
+    while (it != project.sources.end()) {
+        QFileInfo fi(*it);
+        QString fn = QDir::cleanPath(fi.absoluteFilePath());
+        if (fn.endsWith(QLatin1String(".qrc"), Qt::CaseInsensitive)) {
+            qrcFiles += fn;
+            it = project.sources.erase(it);
+        } else {
+            ++it;
+        }
+    }
+    return qrcFiles;
+}
+
+// Replace all .qrc files in the project with their content.
+static void expandQrcFiles(Project &project)
+{
+    for (const QString &qrcFile : extractQrcFiles(project))
+        project.sources << getResources(qrcFile);
+}
+
 static bool processTs(Translator &fetchedTor, const QString &file, ConversionData &cd)
 {
     for (const Translator::FileFormat &fmt : qAsConst(Translator::registeredFileFormats())) {
@@ -1036,6 +1061,8 @@ int main(int argc, char **argv)
                      .arg(projectDescriptionFile));
             return 1;
         }
+        for (Project &project : projectDescription)
+            expandQrcFiles(project);
     }
 
     bool fail = false;
