tests/auto/linguist/lupdate/testdata/good/parseqrc_json/main.cpp
@@ -1,0 +1,10 @@
+// Copyright (C) 2017 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only WITH Qt-GPL-exception-1.0
+
+// IMPORTANT!!!! If you want to add testdata to this file,
+// always add it to the end in order to not change the linenumbers of translations!!!
+#include <QtCore/QCoreApplication>
+
+void func1() {
+    QCoreApplication::tr("Hello world");
+}
