tests/auto/linguist/lupdate/testdata/good/parseqrc_json/main.qml
@@ -1,0 +1,10 @@
+// Copyright (C) 2017 The Qt Company Ltd.
+// SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only WITH Qt-GPL-exception-1.0
+
+import QtQuick 1.0
+
+QtObject {
+    function translate() {
+        qsTr("From QML file in root");
+    }
+}
